@@ -1,6 +1,8 @@
 package com.hengpick.mall.decision.domain;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
@@ -16,7 +18,8 @@ public record RunCompletionCallback(
         Objects.requireNonNull(runId);
         Objects.requireNonNull(completionType);
         Objects.requireNonNull(contentHash);
-        resultSummary = Map.copyOf(Objects.requireNonNull(resultSummary));
+        resultSummary = Collections.unmodifiableMap(
+                new LinkedHashMap<>(Objects.requireNonNull(resultSummary)));
         Objects.requireNonNull(completedAt);
         if (runVersion < 1) {
             throw new IllegalArgumentException("Run 版本必须为正数");
